--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Donald CV</title>
+  <title>FRANCK CV</title>
   <meta content="the description" name="description">
   <meta content="the keywords" name="keywords">
 
@@ -46,8 +46,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Donald Donchi</a></h1>
+        <img src="https://scontent.fbre2-2.fna.fbcdn.net/v/t39.30808-6/480177285_9075698855858050_8178183120555155500_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=b_TU4ET6hiMQ7kNvgFGYPyu&_nc_oc=AdjOwbVfTBXHZVbNe-DtN7rQBDE4cmXjKv_sS-B-tnIBi7kRswH1VtOYxF9cXQQVqSA&_nc_zt=23&_nc_ht=scontent.fbre2-2.fna&_nc_gid=AuXz57BF_Gd-1xaJtc_fqyh&oh=00_AYARY4DNmWTbuk_5ataxPbpi9ObMUafyok4hiwMCOhfZCA&oe=67C4F8AD" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Franck Temoukam</a></h1>
         <div class="social-links mt-3 text-center">
 
           <a href="#" class="github"><i class="bx bxl-github"></i></a>
@@ -70,7 +70,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Donald Donchi Fofack</h1>
+      <h1>Franck Temoukam</h1>
       <p>Ich bin <span class="typed" data-typed-items="Informatiker, Softwareentwickler"></span></p>
     </div>
   </section><!-- End Hero -->
